--- a/src/View/MainWindow.xaml
+++ b/src/View/MainWindow.xaml
@@ -1814,8 +1814,12 @@
             </r:Ribbon>
             <!--</ScrollViewer>-->
             
-            <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                 <Grid Grid.IsSharedSizeScope="True" ShowGridLines="false">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"></RowDefinition>
+                        <RowDefinition Height="auto"></RowDefinition>
+                    </Grid.RowDefinitions>
+
                     <ContentControl Grid.Row="0"  prism:RegionManager.RegionName="KarveToolBar"/>
                     <ScrollViewer Grid.Row="1">
                         <TabControl x:Name="tbControl" SelectionChanged="tbControl_SelectionChanged">
