- Added batch mode to the DataMode. Just one connection for multiple queries. - Fixed and unit tested the SupplierDataAccessLayer. All calls are asynchronous. - Added a base Asynchronous command. - Added a session scope interface.

--- a/src/ProvidersModule/View/ProvidersControl.xaml
+++ b/src/ProvidersModule/View/ProvidersControl.xaml
@@ -1354,6 +1354,11 @@
                                                                            IsSynchronizedWithCurrentItem="True"  
                                                                            SelectionMode="Extended" 
                                                                            SelectionUnit="FullRow" >
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="SelectionChanged">
+                            <i:InvokeCommandAction Command="{Binding SelectedIndexCommand}" CommandParameter="{Binding ElementName=Suppliers, Path=SelectedValue}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
                     <DataGrid.Columns>
                         <extendedColumn:ExtendedDataGridTextColumn  Header="Numero" AllowAutoFilter="True" Width="20*" Binding="{Binding Numero}"
                                             />
