--- a/src/ProvidersModule/Views/OrderCommunication.xaml
+++ b/src/ProvidersModule/Views/OrderCommunication.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="ProvidersModule.View.Contactos"
+﻿<UserControl x:Class="ProvidersModule.Views.OrderCommunication"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-              xmlns:xcdg="http://schemas.xceed.com/wpf/xaml/datagrid"
-             xmlns:local="clr-namespace:ProvidersModule.View"
+             xmlns:local="clr-namespace:ProvidersModule.Views"
+               xmlns:xcdg="http://schemas.xceed.com/wpf/xaml/datagrid"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
@@ -33,91 +33,58 @@
         </Style>
         <!-- DataTemplate to display an Employee object -->
 
-        <DataTemplate x:Key="PersonDataTemplate">
+        <DataTemplate x:Key="DeliveringDateDataTemplate">
             <Grid MaxHeight="30"
                VerticalAlignment="Center">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <Image Margin="0, 0, 5, 0" Source="Images/avatarNotKnown.png" />
-
-                <StackPanel Grid.Column="1"
+                <StackPanel Grid.Column="0"
                         Orientation="Horizontal"
-                        VerticalAlignment="Center">
-                    <TextBlock Text="{Binding Name, NotifyOnValidationError=False, ValidatesOnDataErrors=False}" />
-
-                </StackPanel>
-            </Grid>
-        </DataTemplate>
-        <DataTemplate x:Key="JobPositionDataTemplate">
-            <Grid MaxHeight="30"
-               VerticalAlignment="Center">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition />
-                </Grid.ColumnDefinitions>
-                <Image Margin="0, 0, 5, 0" Source="job.png" />
-
-                <StackPanel Grid.Column="1"
-                        Orientation="Horizontal"
-                        VerticalAlignment="Center">
-                    <ComboBox ItemsSource="{Binding JobPositionTypes}">
-                        <ComboBoxItem IsSelected="True">Director</ComboBoxItem>
-                    </ComboBox>
-
-                </StackPanel>
-            </Grid>
-        </DataTemplate>
-        <DataTemplate x:Key="CityDataTemplate">
-            <Grid MaxHeight="30"
-               VerticalAlignment="Center">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition />
-                </Grid.ColumnDefinitions>
-                <Image Margin="0, 0, 5, 0" Source="city.png" />
-
-                <StackPanel Grid.Column="1"
-                        Orientation="Horizontal"
-                        VerticalAlignment="Center">
-                    <TextBlock Text="{Binding Name, NotifyOnValidationError=False, ValidatesOnDataErrors=False}" />
-
+                        VerticalAlignment="Top">
+                    <DatePicker></DatePicker>
+                    <Button  Grid.Row="1" Name="DeliveringWaySearchButton" HorizontalAlignment="Left"  Command="{Binding DeliveringDateSearchCommand}" 
+                                 CommandParameter="Supplier" >
+                        <Image Source="/ProvidersModule;component/Images/search.png" Height="20"/>
+                    </Button>
                 </StackPanel>
             </Grid>
         </DataTemplate>
 
-        <DataTemplate x:Key="AddressDataTemplate">
+        <DataTemplate x:Key="ViaDataTemplate">
             <Grid MaxHeight="30"
                VerticalAlignment="Center">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <Image Margin="0, 0, 5, 0" Source="address.png" />
-
+                <TextBox Name="OrderWay" Width="100" Grid.Column="0" />
                 <StackPanel Grid.Column="1"
                         Orientation="Horizontal"
-                        VerticalAlignment="Center">
-                    <TextBlock Text="{Binding Name, NotifyOnValidationError=False, ValidatesOnDataErrors=False}" />
-
+                        VerticalAlignment="Top">
+                    <Button  Grid.Row="1" Name="CountrySearchButton" HorizontalAlignment="Left"  Command="{Binding ViaSearchCommand}" 
+                                 CommandParameter="Supplier" >
+                        <Image Source="/ProvidersModule;component/Images/search.png" Height="20"/>
+                    </Button>
                 </StackPanel>
             </Grid>
         </DataTemplate>
-        <DataTemplate x:Key="PhoneDataTemplate">
+        <DataTemplate x:Key="SellConditionDataTemplate">
             <Grid MaxHeight="30"
                VerticalAlignment="Center">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <Image Margin="0, 0, 5, 0" Source="phone.png" />
-
+                <TextBox Name="SellConditionWay" Width="100" Grid.Column="0" />
                 <StackPanel Grid.Column="1"
                         Orientation="Horizontal"
-                        VerticalAlignment="Center">
-                    <TextBlock Text="{Binding Name, NotifyOnValidationError=False, ValidatesOnDataErrors=False}" />
-
+                        VerticalAlignment="Top">
+                    <Button  Grid.Row="1" Name="CountrySearchButton" HorizontalAlignment="Left"  Command="{Binding SellConditionCommand}" 
+                                 CommandParameter="Supplier" >
+                        <Image Source="/ProvidersModule;component/Images/search.png" Height="20"/>
+                    </Button>
                 </StackPanel>
             </Grid>
         </DataTemplate>
@@ -128,8 +95,11 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <Image Margin="0, 0, 5, 0" Source="email.png" />
 
+                <Button  Name="SendMailButton" HorizontalAlignment="Left"  Command="{Binding SendMailButton}" 
+                                 CommandParameter="SendMail">
+                    <Image Source="/ProvidersModule;component/Images/email.png"/>
+                </Button>
                 <StackPanel Grid.Column="1"
                         Orientation="Horizontal"
                         VerticalAlignment="Center">
@@ -146,7 +116,7 @@
     <Grid>
         <Grid.Resources>
 
-            <xcdg:DataGridCollectionViewSource x:Key="cvsOrders" 
+            <xcdg:DataGridCollectionViewSource x:Key="deliveringOrders" 
                                                Source="{Binding}">
                 <xcdg:DataGridCollectionViewSource.GroupDescriptions>
                     <PropertyGroupDescription PropertyName="ShipCountry" />
@@ -156,38 +126,40 @@
         </Grid.Resources>
 
         <xcdg:DataGridControl x:Name="_dataGrid"
-                            ItemsSource="{Binding Source={StaticResource cvsOrders}}" 
+                            ItemsSource="{Binding Source={StaticResource deliveringOrders}}" 
                               AllowDrag="False">
             <xcdg:ColumnManagerCell Style="{StaticResource CustomHeader }">
 
             </xcdg:ColumnManagerCell>
-            
+
             <xcdg:DataGridControl.Columns>
-               
 
-                <xcdg:Column FieldName="Name"
-                             Title="Nombre"
-                             Width="150"
-                             CellContentTemplate="{StaticResource PersonDataTemplate}" 
-                             />
-                <xcdg:Column FieldName="JobPosition"
-                             Title="Cargo"
-                             Width="120"
-                             CellContentTemplate="{StaticResource JobPositionDataTemplate}" />
-                <xcdg:Column FieldName="Department"
-                             Title="Departamento"
-                             Width="100" 
-                             />
-                <xcdg:Column FieldName="Phone"
-                             Title="Telefono"
-                                 CellContentTemplate="{StaticResource PhoneDataTemplate}"
-                            />
 
+                <xcdg:Column FieldName="DeliveringWay"
+                             Title="Via"
+                             Width="140"
+                             CellContentTemplate="{StaticResource ViaDataTemplate}" 
+                             />
                 <xcdg:Column FieldName="Email"
+                                 CellContentTemplate="{StaticResource EmailDataTemplate}" 
                              Title="Email"
-                             Width="100" 
-                                   CellContentTemplate="{StaticResource EmailDataTemplate}"/>
+                             Width="80"
+                             />
+                <xcdg:Column FieldName="DeliveringDate"
+                             Title="Fecha de Entrega"
+                             Width="150" 
+                             CellContentTemplate="{StaticResource DeliveringDateDataTemplate}" 
+                             />
+                <xcdg:Column FieldName="SellCondition"
+                             Title="Condición de Venta"
+                             Width="170" 
+                             CellContentTemplate="{StaticResource SellConditionDataTemplate}" 
+                             />
+                
             </xcdg:DataGridControl.Columns>
         </xcdg:DataGridControl>
     </Grid>
+
 </UserControl>
+
+
