--- a/src/ProvidersModule/Views/StarsControl.xaml
+++ b/src/ProvidersModule/Views/StarsControl.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="ProvidersModule.View.StarsControl"
+﻿<UserControl x:Class="ProvidersModule.Views.StarsControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ProvidersModule.View"
+             xmlns:local="clr-namespace:ProvidersModule.Views"
              mc:Ignorable="d" 
              Height="Auto" Width="Auto">
     <Grid x:Name="gdStar">
